- Add notification for cookies use in loging.php form - Added mysqli_real_escape_string to title and content in addNewPost and updatePost to keep special characters such as apostrophe in (it's) - fixed style in post-preview, made the post title limited to 75% to fix problem that when title is long it covers the category. - In verify.php changed the max character of title from 60 to 100 for both add and edit posts functions

--- a/css/style.css
+++ b/css/style.css
@@ -215,12 +215,14 @@ header .logged-in
 .main-content-wrapper .main-content .post .post-preview h2
 {
     margin: 10px auto 5px auto;
+    max-width: 75%;
+    text-align: justify;
 }
 .main-content-wrapper .main-content .post .post-preview .post-title
 {
     text-decoration: none;
     color: #202639;
-    margin: 0;
+    /*margin: 0;*/
     padding:0 ;
 
     /*font-size: 0.8em;*/
